force-app/main/default/objects/Skill_Bundle_Entry__c/fields/Agent_Skill__c.field-meta.xml
<CustomField>
    <fullName>Agent_Skill__c</fullName>
    <description>DeveloperName of the Agent_Skill__mdt record this entry provides values for. Text field (not Lookup) to allow cross-object-type resolution between Custom Object and CMDT at runtime. AgentCapabilitySelector uses this value as the map key when building the agent capability map.</description>
    <label>Agent Skill</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>