force-app/main/default/objects/Skill_Bundle_Entry__c/fields/Skill_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Skill_Bundle__c</fullName>
    <description>Parent skill bundle. Entries cascade delete when the bundle is deleted.</description>
    <label>Skill Bundle</label>
    <referenceTo>Skill_Bundle__c</referenceTo>
    <relationshipLabel>Skill Bundle Entries</relationshipLabel>
    <relationshipName>Skill_Bundle_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>