force-app/main/default/objects/Skill_Bundle_Entry__c/fields/Values__c.field-meta.xml
<CustomField>
    <fullName>Values__c</fullName>
    <description>Comma or semicolon delimited skill values this bundle provides.</description>
    <label>Values</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>